--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Daniel van Strien
 description: digital collections + computational methods 
 github_username: davanstrien
 # you can comment the below line out if your repo name is not different than your baseurl
-github_repo: "test-blog"
+github_repo: "blog"
 
 # OPTIONAL: override baseurl and url if using a custom domain
 # Note: leave out the trailing / from this value. 
