--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,7 @@ jobs:
           
 
     - name: Copy Repository Contents
-      uses: actions/checkout@master
+      uses: actions/checkout@main
       with:
         persist-credentials: false
 
@@ -36,7 +36,7 @@ jobs:
       run: |
         rm -rf _site
         sudo chmod -R 777 .
-          
+
     - name: Jekyll build
       uses: docker://hamelsmu/fastpages-jekyll
       with:
