--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ plugins:
 paginate: 10
 paginate_path: /page:num/
 
-remote_theme: jekyll/minima
+remote_theme: jekyll/minima@41b97699af658128fa9983e5312ca5516641f335
 
 titles_from_headings:
   enabled:     true
