--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,7 @@
-*.swp
-~*
-*~
-_site
-.sass-cache
-.jekyll-cache
-.jekyll-metadata
-vendor
-_notebooks/.ipynb_checkpoints
-# Local Netlify folder
-.netlify
-.tweet-cache
-__pycache__
-.DS_Store
-
+/.quarto/
+/docs/
 .env
 logs/
 __pycache__/
+/.quarto/
+/_site/
