chore: Add Google Analytics tracking and disable storage in website configuration

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,3 +22,8 @@ format:
   html:
     theme: cosmo
     css: styles.css
+
+website:
+  google-analytics: "G-F61N6B5LBY"
+  storage: none
+  anonymize-ip: true
