--- a/_quarto.yml
+++ b/_quarto.yml
@@ -24,6 +24,6 @@ format:
     css: styles.css
 
 website:
-  google-analytics: "G-F61N6B5LBY"
+  google-analytics: G-F61N6B5LBY
   storage: none
   anonymize-ip: true
