--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,6 +17,9 @@ website:
         href: https://github.com/davanstrien
       - icon: twitter
         href: https://twitter.com/vanstriendaniel
+  google-analytics: G-F61N6B5LBY
+  storage: none
+  anonymize-ip: true
 
 format:
   html:
