--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,15 +11,14 @@ website:
     right:
       - text: "About"
         href: about.qmd
-      # - href: pages/projects.qmd
-      - href: pages/cv.qmd
+
       - icon: github
         href: https://github.com/davanstrien
       - icon: twitter
         href: https://twitter.com/vanstriendaniel
-  google-analytics: G-F61N6B5LBY
-  storage: none
-  anonymize-ip: true
+  google-analytics:
+    tracking-id: "G-F61N6B5LBY"
+    anonymize-ip: true
 
 format:
   html:
