--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,9 +1,7 @@
 project:
   type: website
-
 execute:
   freeze: auto
-
 website:
   title: "Daniel van Strien"
   favicon: icons/favicon.ico
@@ -15,7 +13,6 @@ website:
         href: https://github.com/davanstrien
       - icon: twitter
         href: https://twitter.com/vanstriendaniel
-
 format:
   html:
     theme: cosmo
@@ -23,3 +20,4 @@ format:
     include-in-header:
       - text: |
           <script defer src="https://cloud.umami.is/script.js" data-website-id="85cb27d6-dbf9-43d7-97d0-be4e6724de7a"></script>
+          <meta name="msvalidate.01" content="4246174F24A3CB7C9CBEAA94E1FF8E84" />
