Fix glob pattern for screenshot PNGs in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,6 @@ __pycache__/
 **/*.out*
 **/*.log*
 .qodo
-posts/post-with-code/colpali-lora/screenshot/**/*/.png
+posts/post-with-code/colpali-lora/screenshot/**/*.png
 _freeze/posts/2025/claude-dot-md/**/*/.png
+
